## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = gwall

gwall_SOURCES = \
	main.cc \
	rucmmd.cxx \
	rucmmd.h \
	cmmd.cxx \
	cmmd.h \
	fwatch.cxx \
	fwatch.h \
	gstartup.cxx \
	gstartup.h \
	error_msg.cxx \
	error_msg.h \
	relaunch.sh

gwall_LDFLAGS = 

gwall_LDADD = 

